--- a/ema-tes-compr.html
+++ b/ema-tes-compr.html
@@ -96,14 +96,7 @@ $("#city").html(response.city); {$("#city1").html(response.city); }{$("#city2").
 <div id="vid_631fa8a18dfc5d000a2045fd" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_631fa8a18dfc5d000a2045fd" src="https://images.converteai.net/b52c30e3-fe14-44d4-bbca-aadceabc78bb/players/631fa8a18dfc5d000a2045fd/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_631fa8a18dfc5d000a2045fd" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_631fa8a18dfc5d000a2045fd">var s=document.createElement("script");s.src="https://scripts.converteai.net/b52c30e3-fe14-44d4-bbca-aadceabc78bb/players/631fa8a18dfc5d000a2045fd/player.js",s.async=!0,document.head.appendChild(s);</script>      
       
 
-        <div id="cta1" class="mt-4 d-none">
-          <p> </p>
-              <a href="https://checkout.abmex.com.br/-QvEW1IT-_/Dnp1P5NrWq8Iphg" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO AGORA!</span>
-                <span class="span-btn2">(atenção: 30% de desconto só hoje R$147,00)</span>
-              </a>
-              <img class="mx-auto" height="42px" src="assets/img/secure.webp" alt="compra segura privacidade protegida"> </div>
-            </div>
+      
 
 
 
@@ -578,7 +571,7 @@ generate();</script></p>
     </div>
 
 <!-- Botão 2 -->
-            <div id="cta2" class="mt-4 d-none">
+            <div id="cta1" class="mt-4 d-none">
               <a href="https://checkout.abmex.com.br/-QvEW1IT-_/Dnp1P5NrWq8Iphg" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO AGORA!</span>
                 <span class="span-btn2">(atenção: 30% de desconto só hoje R$147,00)</span>
@@ -611,7 +604,7 @@ generate();</script></p>
 
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 635400); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("").classList.remove("d-none")}, 1590600); // temporização da Call to Action (em milissegundos)
     </script>
   
   
